# spectrum-rgb

./: Dockerfile  README.md  abridged-cie-cmf.txt  colour_system.py  main.py  pyproject.toml  requirements.txt  spectrum.py  tmp.dockerfile
.github/workflows/: build.yaml
